# modern-analytics-warehouse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dbt_project/: dbt_project.yml
dbt_project/models/staging/: schema.yml  source.yml  stg_customers.sql  stg_marketing_spend.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_web_sessions.sql
dbt_project/seeds/: customers.csv  marketing_spend.csv  orders.csv  payments.csv  products.csv
project_2_modern_analytics_warehouse/: client_brief.md  data_dictionary.md
project_2_modern_analytics_warehouse/input_data/: order_items.csv  web_sessions.csv
src/: app.py  logger.py  version.py
src/pipeline/: pipeline.py  reports.py
